RESOLVED FIXED295842
[Cleanup] inlineBlockBaseline should not be called on flex, grid, table and text control's inner container
https://bugs.webkit.org/show_bug.cgi?id=295842
Summary [Cleanup] inlineBlockBaseline should not be called on flex, grid, table and t...
alan
Reported 2025-07-12 16:43:12 PDT
ssia
Attachments
Patch (5.12 KB, patch)
2025-07-12 16:44 PDT, alan
no flags
Patch (118.54 KB, patch)
2025-07-12 16:45 PDT, alan
no flags
Patch (5.50 KB, patch)
2025-07-12 19:37 PDT, alan
no flags
Patch (119.02 KB, patch)
2025-07-12 19:37 PDT, alan
ews-feeder: commit-queue-
Patch (5.36 KB, patch)
2025-07-13 10:09 PDT, alan
no flags
Patch (118.91 KB, patch)
2025-07-13 10:10 PDT, alan
ews-feeder: commit-queue-
[fast-cq]Patch (5.36 KB, patch)
2025-07-22 09:08 PDT, alan
no flags
alan
Comment 1 2025-07-12 16:44:41 PDT
alan
Comment 2 2025-07-12 16:45:28 PDT
alan
Comment 3 2025-07-12 19:37:04 PDT
alan
Comment 4 2025-07-12 19:37:59 PDT
alan
Comment 5 2025-07-13 10:09:32 PDT
alan
Comment 6 2025-07-13 10:10:21 PDT
Radar WebKit Bug Importer
Comment 7 2025-07-19 16:44:13 PDT
alan
Comment 8 2025-07-22 09:08:18 PDT
Created attachment 476150 [details] [fast-cq]Patch
EWS
Comment 9 2025-07-22 13:21:01 PDT
Committed 297752@main (1f0bdb591de2): <https://commits.webkit.org/297752@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 476150 [details].
Note You need to log in before you can comment on or make changes to this bug.