[Cleanup] inlineBlockBaseline should not be called on flex, grid, table and text control's inner container https://bugs.webkit.org/show_bug.cgi?id=295842

Reviewed by Antti Koivisto.

* Source/WebCore/layout/integration/LayoutIntegrationBoxGeometryUpdater.cpp:
(WebCore::LayoutIntegration::lastInflowBoxBaseline):
(WebCore::LayoutIntegration::inlineBlockBaseline):

Canonical link: https://commits.webkit.org/297752@main